--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 	<meta charset="utf-8" />
 	<title>Jacob Schwartz</title>
 	
-	<link rel="stylesheet" href="css/normalize.css" />
-	<link rel="stylesheet" href="css/styles.css" />
+	<link rel="stylesheet" href="css/styleSheet.css" />
 	
 </head>
 <body>
 	<h1>Jacob Schwartz</h1>
+	<p><img src='img/me.jpg' class='me'/> </p>
 </body>
 </html>
