--- a/index.html
+++ b/index.html
@@ -10,5 +10,20 @@
 <body>
 	<h1>Jacob Schwartz</h1>
 	<p><img src='img/me.jpg' class='me'/></p>
+	<p>My favorite links
+		<br/>
+		<a href="reddit.com">Reddit</a><br>
+		<a href="blog.lifehacker.com">LifeHacker</a><br>
+		<a href="cracked.com">Cracked</a><br>
+		<a href="http://docs.oracle.com/javase/7/docs/api/">The Java API</a><br>
+		<a href="http://www.howtogeek.com/">How To Geek</a><br>		
+	</p>
+
+	<h2>About Me:</h2>
+	<p>
+		I am a Computer Science major at EWU. I have lived in Spokane for most of my life, though I have also lived overseas in both Suriname in South America, and China, at a young age. I developed a love for the culture (and food, especially the food) and I would really love to go back some day. <br>
+		My career goal is to go into software engineering, hopefully being able to travel all over the world.<br>
+		My interests include music, both listening to and playing, computers (obviously), and occasionally a good book.
+	</p>
 </body>
 </html>
