--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<p><img src='img/me.jpg' class='me'/></p>
 	<p>My favorite links
 		<br/>
-		<a href="reddit.com">Reddit</a><br>
+		<a href="www.reddit.com">Reddit</a><br>
 		<a href="blog.lifehacker.com">LifeHacker</a><br>
 		<a href="cracked.com">Cracked</a><br>
 		<a href="http://docs.oracle.com/javase/7/docs/api/">The Java API</a><br>
