--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 	<p><img src='img/me.jpg' class='me'/></p>
 	<p>My favorite links
 		<br/>
-		<a href="www.reddit.com">Reddit</a><br>
-		<a href="blog.lifehacker.com">LifeHacker</a><br>
-		<a href="cracked.com">Cracked</a><br>
+		<a href="http://www.reddit.com">Reddit</a><br>
+		<a href="http://blog.lifehacker.com">LifeHacker</a><br>
+		<a href="http://cracked.com">Cracked</a><br>
 		<a href="http://docs.oracle.com/javase/7/docs/api/">The Java API</a><br>
 		<a href="http://www.howtogeek.com/">How To Geek</a><br>		
 	</p>
