--- a/index.html
+++ b/index.html
@@ -4,26 +4,23 @@
 	<meta charset="utf-8" />
 	<title>Jacob Schwartz</title>
 	
-	<link rel="stylesheet" href="css/styleSheet.css" />
-	
+	<link rel="stylesheet" href="css/styles.css" />
+	<link rel="stylesheet" href="css/normalize.css" />
+	<link href='http://fonts.googleapis.com/css?family=Merriweather+Sans|Oxygen' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	<h1>Jacob Schwartz</h1>
-	<p><img src='img/me.jpg' class='me'/></p>
-	<p>My favorite links
-		<br/>
-		<a href="http://www.reddit.com">Reddit</a><br>
-		<a href="http://blog.lifehacker.com">LifeHacker</a><br>
-		<a href="http://cracked.com">Cracked</a><br>
-		<a href="http://docs.oracle.com/javase/7/docs/api/">The Java API</a><br>
-		<a href="http://www.howtogeek.com/">How To Geek</a><br>		
-	</p>
+	<div id="leftColumnContainer">
+		<nav>
+			<ul>
+				<li id="home"><a href="#">Home</a></li>
+				<li id="resume"><a href="#">Resume</a></li>
+				<li id="about"><a href="#">About Me</a></li>
+			</ul>
+		</nav>
+	</div>
 
-	<h2>About Me:</h2>
-	<p>
-		I am a Computer Science major at EWU. I have lived in Spokane for most of my life, though I have also lived overseas in both Suriname in South America, and China, at a young age. I developed a love for the culture (and food, especially the food) and I would really love to go back some day. <br>
-		My career goal is to go into software engineering, hopefully being able to travel all over the world.<br>
-		My interests include music, both listening to and playing, computers (obviously), and occasionally a good book.
-	</p>
+	<div id="rightColumnContainer">
+		<h1 id="name">Jacob Schwartz</h1>
+	</div>
 </body>
 </html>
