--- a/index.html
+++ b/index.html
@@ -7,20 +7,31 @@
 	<link rel="stylesheet" href="css/styles.css" />
 	<link rel="stylesheet" href="css/normalize.css" />
 	<link href='http://fonts.googleapis.com/css?family=Merriweather+Sans|Oxygen' rel='stylesheet' type='text/css'>
+
+
 </head>
 <body>
-	<div id="leftColumnContainer">
-		<nav>
-			<ul>
-				<li id="home"><a href="#">Home</a></li>
-				<li id="resume"><a href="#">Resume</a></li>
-				<li id="about"><a href="#">About Me</a></li>
-			</ul>
-		</nav>
-	</div>
-
-	<div id="rightColumnContainer">
-		<h1 id="name">Jacob Schwartz</h1>
+	<div id="outerContainer">
+		<div class="container">
+			<nav class="navigation">
+				<ul>
+					<li><a href="#home">Home</a></li>
+					<li><a href="#about">About Me</a></li>
+					<li><a href="#resume">My Resume</a></li>
+					<li><a href="#projects">My Projects</a></li>
+				</ul>
+			</nav>
+			
+			<div id="home" class="content">
+				<img id="sax" src="img/sax.JPG"/>
+				<span id="text">
+				<h1>Hi there!</h1>
+				<p>
+					 Welcome to my little corner. So far its not too much but I wanted to let people know a little about me. Above you'll find some links that will help you  some insight into who I am.
+				</p>
+				</span>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
