--- a/index.html
+++ b/index.html
@@ -12,17 +12,16 @@
 </head>
 <body>
 	<div id="outerContainer">
-		<div class="container">
+		<div id="home" class="container">
 			<nav class="navigation">
 				<ul>
 					<li><a href="#home">Home</a></li>
-					<li><a href="#about">About Me</a></li>
 					<li><a href="#resume">My Resume</a></li>
 					<li><a href="#projects">My Projects</a></li>
 				</ul>
 			</nav>
 			
-			<div id="home" class="content">
+			<div class="content" id="homeContent">
 				<img id="sax" src="img/sax.JPG"/>
 				<span id="text">
 				<h1>Hi there!</h1>
@@ -30,6 +29,96 @@
 					 Welcome to my little corner. So far its not too much but I wanted to let people know a little about me. Above you'll find some links that will help you  some insight into who I am.
 				</p>
 				</span>
+			</div>
+		</div>
+
+
+		<div id="resume" class="container">
+			<nav class="navigation">
+				<ul>
+					<li><a href="#home">Home</a></li>
+					<li><a href="#resume">My Resume</a></li>
+					<li><a href="#projects">My Projects</a></li>
+				</ul>
+			</nav>
+			
+			<div class="content" id="resumeContent">
+				<h1 id="title">Jacob Schwartz</h1>
+				<article id="contact"><h2>Contact Info:</h2> 509.944.5202 | perpes.gaudium@gmail.com | 507 N. Skipworth Rd, Spokane Valley, Wa 99206</article>
+				<article id="skills"><h2>Technical Skills</h2> 
+					<ul>
+						<li>Python, C and Java programming experience</li>
+						<li>Experience in computer repair (non-professional)</li>
+						<li>Proficient with Microsoft Office Word, PowerPoint, and Excel</li>
+						<li>Experience with Windows computers - Intermediate</li>
+						<li>Experience with office tech. including copy machines, printers, etc.</li>
+						<li>Proficient with Photoshop</li>
+						<li>Able to work well independently or in a team </li>
+						<li>Ability to read sketching documents</li>
+						<li>Ability to communicate clearly</li>
+					</ul>
+				</article>
+				<article id="experience"><h2>Work Experience</h2>
+					<ul>
+					<li>November 2012 - Current | Office Depot
+					<ul>
+					<li>Sales floor</li>
+					<li>Technology repair & education</li>
+					<li>Copy and Print Services including design work</li></ul></li>
+					<li>December 2011 - November 2012 | FatBurger (Northern Quest Casino)
+					<ul>
+					<li>Cashier/Server, Food Prep, Assembly, etc.</li>
+					<li>Secondary Shift-Lead</li></ul></li>
+					<li>June 2011 - September 2011 | The Glover Mansion
+					<ul>
+					<li>Utility: cleaning and care of Mansion, light grounds work</li></ul></li>
+					</ul>
+				</article>
+				<article id="education"><h2>Education</h2>
+					<ul>
+					<li>
+					High School | University High School
+					<ul>
+					<li>Classes in Computer Aided Drafting and Engineering, German, Core Classes</li>
+					<li>3.78 GPA</li>
+					</ul>
+					</li>
+					<li>
+					College | Eastern Washington University
+					<ul>
+					<li>Studying Computer Science and Web Application Development</li>
+					<li>3.47 GPA</li>
+					</ul>
+					</li>
+					</ul>
+				</article>
+
+				<article id="awards"><h2>Awards</h2>
+					<ul>
+					<li>
+					Technology Student Association | Spring 2009
+					<ul><li>1st place in CAD Engineering competition</li></ul>
+					</li>
+					<li>
+					Technology Student Association | Spring 2010 and 2011
+					<ul><li>2nd place in CAD Engineering competition</li></ul>
+					</li>
+					</ul>
+				</article>
+			</div>
+		</div>
+
+		<div id="projects" class="container">
+			<nav class="navigation">
+				<ul>
+					<li><a href="#home">Home</a></li>
+					<li><a href="#resume">My Resume</a></li>
+					<li><a href="#projects">My Projects</a></li>
+				</ul>
+			</nav>
+			
+			<div class="content">
+				
 			</div>
 		</div>
 	</div>
