--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	
 	<link rel="stylesheet" href="css/styles.css" />
 	<link rel="stylesheet" href="css/normalize.css" />
-	<link href='http://fonts.googleapis.com/css?family=Merriweather+Sans|Oxygen' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Telex' rel='stylesheet' type='text/css'>
 
 
 </head>
